[gd_scene load_steps=3 format=3 uid="uid://c3ahbd251yt34"]

[ext_resource type="Script" path="res://scripts/player_sensor.gd" id="1_fcth0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4vs3w"]
radius = 25.0

[node name="Senses" type="Node3D"]
script = ExtResource("1_fcth0")

[node name="SightArea" type="Area3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("SphereShape3D_4vs3w")

[node name="RaycastPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9597, 2.00774)

[connection signal="body_entered" from="SightArea" to="." method="_on_sight_area_body_entered"]
[connection signal="body_exited" from="SightArea" to="." method="_on_sight_area_body_exited"]
